[project]
name = "bufferer"
version = "0.23.0"
description = "Insert fake buffering events into video files."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE.md"]
authors = [
    { name = "Werner Robitza", email = "werner.robitza@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Video",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "docopt",
]

[project.urls]
Homepage = "https://github.com/slhck/bufferer"

[project.scripts]
bufferer = "bufferer.__main__:main"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest >=8.1.1,<9",
    "ruff>=0.12.11",
    "mypy",
    "pdoc>=15.0.4",
]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
exclude = ["build"]

